# Netflix-project

./: .gitignore  README.md  docker-compose.yml  package-lock.json
android_app/app/: build.gradle.kts
android_app/gradle/: libs.versions.toml
recServer/: Dockerfile
recServer/config/: env.locla
recServer/src/: App.h  ConsoleReciver.cpp  ConsoleReciver.h  ConsoleTransmitter.cpp  ConsoleTransmitter.h  Delete.cpp  Delete.h  FileUtils.cpp  FileUtils.h  Get.cpp  Get.h  Help.cpp  Help.h  ICommand.h  IReciver.h  IThread.h  ITransmitter.h  Patch.cpp  Patch.h  Post.cpp  Post.h  ServerSocket.cpp  ServerSocket.h  SocketReciver.cpp  SocketReciver.h  SocketTransmitter.cpp  SocketTransmitter.h  ThreadPool.cpp  ThreadPool.h  Update.cpp  Update.h  Validator.cpp  Validator.h  app.cpp  regularThread.cpp  regularThread.h  server.cpp
recServer/tests/: CMakeLists.txt  Dockerfile  test_set.cpp
webServer/: Dockerfile  app.js  package-lock.json  package.json
webServer/DB_data/: WiredTiger.turtle  WiredTiger.wt  WiredTiger.wt.orig  _mdb_catalog.wt  collection-0-18038010936463532796.wt  collection-11-18038010936463532796.wt  collection-2-18038010936463532796.wt  collection-4-18038010936463532796.wt  collection-7-18038010936463532796.wt  collection-8-18038010936463532796.wt  collection-9-18038010936463532796.wt  index-1-18038010936463532796.wt  index-10-18038010936463532796.wt  index-12-18038010936463532796.wt  index-13-18038010936463532796.wt  index-14-18038010936463532796.wt  index-15-18038010936463532796.wt  sizeStorer.wt  (+8 more)
web_app/: .gitignore  package-lock.json  package.json
(+363 files in other folders)
